Fixed sorting of options, added support for upstart for handling service better on Ubuntu

--- a/templates/profile.conf.erb
+++ b/templates/profile.conf.erb
@@ -5,6 +5,6 @@ IPSec secret <%= @secret %>
 Xauth username <%= @username %>
 Xauth password <%= @password %>
 
-<% @options.each do |key,value| -%>
+<% @options.sort.each do |key,value| -%>
 <%= key %> <%= value %>
 <% end -%>
