removing vpnc-connect call

--- a/templates/rh_initscript.erb
+++ b/templates/rh_initscript.erb
@@ -14,7 +14,7 @@
 case "$1" in
   start)
         log_daemon_msg "Starting VPN connection" "vpnc-<%= @name %>"
-        /usr/sbin/vpnc-connect /etc/vpnc/<%= @name %>.conf
+        /usr/sbin/vpnc /etc/vpnc/<%= @name %>.conf
         log_end_msg $?
     ;;
   stop)
